clusters/eksctl-lab-smesenAP/workloads/webpage/overlays/production/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: public
  labels:
    istio-injection: enabled
