clusters/eksctl-lab-smesenAP/workloads/webpage/overlays/production/deploy-strategic-patch.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deploy-webpage

spec:
  replicas: 2
