clusters/eksctl-lab-smesenAP/workloads/webpage/overlays/production/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
  namespace: public
spec:
  selector: 
    istio: ingressgateway
  servers:
    - port:
      number: 80
      name: http
      protocol: HTTP
