clusters/eksctl-lab-smesenAP/workloads/webpage/overlays/production/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    note: This is a stage deployment
  labels:
    app: webpage
    istio-injection: enabled
    team: devops
    version: 1.1.7
  name: public
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    note: This is a stage deployment
  labels:
    app: webpage
    team: devops
    version: 1.1.7
  name: kustom-svc-webpage
  namespace: public
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: webpage
    team: devops
    version: 1.1.7
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    note: This is a stage deployment
  labels:
    app: webpage
    team: devops
    version: 1.1.7
  name: kustom-deploy-webpage
  namespace: public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webpage
      team: devops
      version: 1.1.7
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        note: This is a stage deployment
      labels:
        app: webpage
        team: devops
        version: 1.1.7
      name: webpage
    spec:
      containers:
      - image: cachac/kubelabs_webapp:1.1.7
        name: webpage
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 50Mi
        volumeMounts:
        - mountPath: /usr/share/nginx/html/config.js
          name: config-volume
          readOnly: true
          subPath: config.js
      volumes:
      - configMap:
          items:
          - key: CONFIG_JS
            path: config.js
          name: kustom-cm-webpage-config
        name: config-volume
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    note: This is a stage deployment
  labels:
    app: webpage
    team: devops
    version: 1.1.7
  name: kustom-vs-webpage
  namespace: public
spec:
  gateways:
  - default/default-gateway
  hosts:
  - smesen.vendoamigos.com
  http:
  - route:
    - destination:
        host: kustom-svc-webpage.public.svc.cluster.local
        port:
          number: 80
